<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz_tecnico_usuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/txp6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txp6"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/linearlayoutlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                tools:ignore="ExtraText,RtlHardcoded">

                <EditText
                    android:id="@+id/txp7"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/txp7"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/btn10"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:drawableLeft="@drawable/ic_baseline_search_24"
                    android:gravity="left"
                    android:text="@string/btn10" />

            </LinearLayout>

            <EditText
                android:id="@+id/txp8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txp8"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txp9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txp9"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txp10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txp10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txp12"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txp12"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="209dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center|center_horizontal"
                android:text="@string/btn9" />


            <Button
                android:id="@+id/btn12"
                android:layout_width="209dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/btn12" />

            <Button
                android:id="@+id/btn13"
                android:layout_width="209dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="18dp"
                android:text="@string/btn13" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>