<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz_envio_notificacion">

    <TextView
        android:id="@+id/textnotificacion"
        android:layout_width="313dp"
        android:layout_height="69dp"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:text="@string/textnotificacion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textonotificacion"
        android:layout_width="321dp"
        android:layout_height="98dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textonotificacion"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textnotificacion" />

    <Button
        android:id="@+id/botonnotificaciones"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/botonnotificaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textonotificacion" />

    <Button
        android:id="@+id/botonregresarnotificacion"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/botonregresarnotificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonnotificaciones" />

    <EditText
        android:id="@+id/textosunto"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/textosunto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textnotificacion" />
</androidx.constraintlayout.widget.ConstraintLayout>