<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".departamento_tecnico">

    <TextView
        android:id="@+id/txv4tec"
        android:layout_width="383dp"
        android:layout_height="54dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/txv4tec"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/lv1"
        android:layout_width="378dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <EditText
        android:id="@+id/txp4tec"
        android:layout_width="365dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/txp4tec"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv1" />

    <Button
        android:id="@+id/btn4tec"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn4tec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp4tec" />

    <Button
        android:id="@+id/btn6tec"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/btn6tec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4tec" />

    <Button
        android:id="@+id/btn7tec"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/btn7tec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6tec" />

</androidx.constraintlayout.widget.ConstraintLayout>