<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz_sugerencia">

    <TextView
        android:id="@+id/textsugerencia"
        android:layout_width="313dp"
        android:layout_height="69dp"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:text="@string/textsugerencia"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textosugerencia"
        android:layout_width="321dp"
        android:layout_height="98dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/textosugerencia"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textsugerencia" />

    <Button
        android:id="@+id/botonsugerencia"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/botonsugerencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textosugerencia" />

    <Button
        android:id="@+id/botonregresarsugerencia"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/botonregresarsugerencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonsugerencia" />
</androidx.constraintlayout.widget.ConstraintLayout>