<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".departamento_administrativo">


    <TextView
        android:id="@+id/txv4adm"
        android:layout_width="383dp"
        android:layout_height="54dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/txv4adm"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/lv2"
        android:layout_width="378dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/txp4adm"
        android:layout_width="365dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/txp4adm"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv2" />

    <Button
        android:id="@+id/btn4adm"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn4adm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp4adm" />

    <Button
        android:id="@+id/btn6adm"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/btn6adm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4adm" />

    <Button
        android:id="@+id/btn7adm"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/btn7adm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6adm" />

</androidx.constraintlayout.widget.ConstraintLayout>