<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz_dependiente">


    <TextView
        android:id="@+id/txv30"
        android:layout_width="242dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/txv30"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/txvin1"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="TECNICO / USUARIO"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv30" />

    <ImageView
        android:id="@+id/icono15"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/txvin1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv30"
        tools:ignore="MissingConstraints" />

    <com.nex3z.notificationbadge.NotificationBadge
        android:id="@+id/badgeu"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/icono15"
        app:layout_constraintEnd_toEndOf="@+id/icono15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/icono15"
        app:layout_constraintTop_toTopOf="@+id/icono15"
        app:layout_constraintVertical_bias="0.0"
        app:nbMaxTextLength="2" />

    <ImageView
        android:id="@+id/icono16"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:src="@drawable/ic_handyman_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toEndOf="@+id/txvin1"
        app:layout_constraintTop_toBottomOf="@+id/txv30"
        tools:ignore="MissingConstraints" />

    <com.nex3z.notificationbadge.NotificationBadge
        android:id="@+id/badget"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/icono16"
        app:layout_constraintEnd_toEndOf="@+id/icono16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/icono16"
        app:layout_constraintTop_toTopOf="@+id/icono16"
        app:layout_constraintVertical_bias="0.0"
        app:nbMaxTextLength="2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvin1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn30"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btn30"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvin1" />

            <Button
                android:id="@+id/btn40"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btn40"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn30" />

            <Button
                android:id="@+id/btnin"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btnin"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn40" />

            <Button
                android:id="@+id/btnin4"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btnin4"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnin" />

            <Button
                android:id="@+id/btnin1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btnin1"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnin4" />

            <Button
                android:id="@+id/btnin2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btnin2"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnin3" />

            <Button
                android:id="@+id/btnin3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btnin3"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnin1" />

            <Button
                android:id="@+id/btnin5"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="56dp"
                android:gravity="center"
                android:text="@string/btnin5"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnin2" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>